--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # terminal true color
 #set-option -sa terminal-overrides ",xtern*:Tc"
-set -g default-terminal "tmux-256color" 
+set -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ",*-256color:Tc" 
 set-option -sa terminal-overrides ",xterm*:Tc" 
 
@@ -38,13 +38,13 @@ set -g @plugin 'kiyoon/treemux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 
 # Configure
-#run '~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux'
 set -g @catppuccin_window_status_style "rounded" # basic, rounded, slanted, custom, or none
 set -g @catppuccin_window_number_position 'right'
 set -g @catppuccin_window_status 'no'
 set -g @catppuccin_window_default_text '#{window_name}'
+set -g @catppuccin_window_current_text '#{window_name}'
+set -g @catppuccin_window_text '#{window_name}'
 set -g @catppuccin_window_current_fill 'number'
-#set -g @catppuccin_window_current_text '#W'
 set -g @catppuccin_window_current_color '#{E:@thm_surface_2}'
 set -g @catppuccin_date_time_text ' %H:%M | %d.%m'
 set -g @catppuccin_status_module_text_bg '#{E:@thm_mantle}'
@@ -53,6 +53,6 @@ set -g @catppuccin_status_module_text_bg '#{E:@thm_mantle}'
 set -gF status-right "#{E:@catppuccin_status_cpu}"
 set -ag status-right "#{E:@catppuccin_status_application}"
 set -agF status-right "#{E:@catppuccin_status_date_time}"
-#run ~/.config/tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
