--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,8 @@ set -g @plugin 'catppuccin/tmux'
 set -g @treemux-tree-nvim-init-file '~/.config/tmux/plugins/treemux/configs/treemux_init.lua'
 set -g @plugin 'kiyoon/treemux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Configure
 set -g @catppuccin_window_status_style "rounded" # basic, rounded, slanted, custom, or none
