--- a/tmux.conf
+++ b/tmux.conf
@@ -7,17 +7,22 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 # Mouse support
 set -g mouse on
 
+#vi mode
+setw -g mode-keys vi
+
 # Keybindings
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-
-# vim navigate panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcoby"
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 
-# Start numbering from 1
+# Start window numbering from 1
 set -g base-index 1
 setw -g pane-base-index 1
 set-window-option -g pane-base-index 1
@@ -28,33 +33,15 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
-set -g @treemux-tree-nvim-init-file '~/.config/tmux/plugins/treemux/configs/treemux_init.lua'
-set -g @plugin 'kiyoon/treemux'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+#gui conf
+set-option -g status-style fg=colour223
+set-window-option -g window-status-style bg=colour144,fg=black
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248
+set-window-option -g window-status-current-style bg=colour149,fg=black
 
-# Configure
-set -g @catppuccin_window_status_style "rounded" # basic, rounded, slanted, custom, or none
-set -g @catppuccin_window_number_position 'right'
-set -g @catppuccin_window_status 'no'
-set -g @catppuccin_window_default_text '#{window_name}'
-set -g @catppuccin_window_current_text '#{window_name}'
-set -g @catppuccin_window_text '#{window_name}'
-set -g @catppuccin_window_current_fill 'number'
-set -g @catppuccin_window_current_color '#{E:@thm_surface_2}'
-set -g @catppuccin_date_time_text ' %H:%M | %d.%m'
-set -g @catppuccin_status_module_text_bg '#{E:@thm_mantle}'
-
-
-set -gF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_date_time}"
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+set-option -g pane-border-style bg=colour239
+set-option -g pane-active-border-style bg=colour214
+set-option -g message-style bg=colour239,fg=colour223
+set-option -g message-command-style bg=colour239,fg=colour223
+set-option -g display-panes-colour colour237
+set-option -g display-panes-active-colour colour1
