--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,12 @@ setw -g mode-keys vi
 # Keybindings
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
