--- a/tmux.conf
+++ b/tmux.conf
@@ -10,14 +10,12 @@ set -g mouse on
 #vi mode
 setw -g mode-keys vi
 
-# Keybindings
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind v split-window -v -c "#{pane_current_path}"
+bind h split-window -h -c "#{pane_current_path}"
+unbind %
+unbind '"'
 
 bind h select-pane -L
 bind j select-pane -D
