--- a/tmux.conf
+++ b/tmux.conf
@@ -11,11 +11,14 @@ set -g mouse on
 setw -g mode-keys vi
 
 # Set new panes to open in current directory
-bind c new-window -c "#{pane_current_path}"
-bind v split-window -v -c "#{pane_current_path}"
-bind h split-window -h -c "#{pane_current_path}"
 unbind %
 unbind '"'
+unbind v
+unbind h
+
+bind c new-window -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind V split-window -v -c "#{pane_current_path}"
 
 bind h select-pane -L
 bind j select-pane -D
